# netbox-tunnels2

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  TODO  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  sitemap.xml
.devcontainer/: Dockerfile-plugin_dev  devcontainer.json  docker-compose.override.yml  entrypoint-dev.sh
.devcontainer/configuration/: plugins.py
.devcontainer/initializers/: device_roles.yml  device_types.yml  devices.yml  interfaces.yml  ip_addresses.yml  manufacturers.yml  sites.yml  users.yml
.github/workflows/: publish.yml  test.yml
changelog/: index.html
contributing/: index.html
development/: Dockerfile  docker-compose.yml
development/configuration/: configuration.py  logging.py  plugins.py
docs/dev/: configuration.testing.py
netbox_tunnels/: filters.py  models.py  views.py
netbox_tunnels/templates/netbox_tunnels/: tunnel_edit.html  tunnels_list.html
netbox_tunnels2/: __init__.py  admin.py  constants.py  filtersets.py  forms.py  graphql.py  models.py  navigation.py  search.py  tables.py  template_content.py  urls.py  version.py  views.py
netbox_tunnels2/api/: serializers.py  url.py  urls.py  views.py
netbox_tunnels2/migrations/: 0001_initial.py  0002_alter_tunnel_b_pub_address.py  0003_tunnel_tenant.py  0004_alter_tunnel_side_a_assigned_object_type_and_more.py  0005_alter_tunnel.py
netbox_tunnels2/tests/: __init__.py  test_api.py  test_models.py
search/: search_index.json
tests/: test_netbox_tunnels_plugin.py
(+5 files in other folders)
