# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-tunnels2"
version = "0.2.5"
description = "Provides the ability track IP Tunnels."
readme = "README.md"
authors = [{ name = "Robert Lynch", email = "robertlynch3@users.noreply.github.com" }]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/robertlynch3/netbox-tunnels2"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[tool.bumpver]
current_version = "0.2.5"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"$',
    'version = "{version}"$',
]
"netbox_tunnels2/version.py" = [
    '__version__="{version}"$',
]